[package]
name = "proxy-socks"
version = "0.1.0"
authors = ["icodesign <github@icodesign.me>"]
edition = "2018"
license-file = "LICENSE"
description = "Client/Server implementation of Socks proxy written in Rust"
homepage = "https://github.com/icodesign/proxy-socks"
repository = "https://github.com/icodesign/proxy-socks"

[features]
default = []
test-utils = []

[dependencies]
async-trait = "0.1"
bytes = "0.5"
log = "0.4"
proxy-relay = { git = "https://github.com/icodesign/proxy-relay", branch = "tokio0.2" }
thiserror = "1.0"
tokio = { version = "0.2", features = ["rt-core", "io-util", "net", "stream", "macros"] }
trust-dns-resolver = { version = "0.19", features = ["dns-over-rustls", "dns-over-https-rustls"] }

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
env_logger = "0.8"

[[bench]]
name = "bench"
