[package]
name = "proxy-socks"
version = "0.1.0"
authors = ["icodesign <github@icodesign.me>"]
edition = "2018"
license-file = "LICENSE"
description = "Client/Server implementation of Socks proxy written in Rust"
homepage = "https://github.com/icodesign/proxy-socks"
repository = "https://github.com/icodesign/proxy-socks"

[features]
default = []
test-utils = []

[dependencies]
async-trait = "0.1"
bytes = "0.5"
log = "0.4"
proxy-relay = { git = "https://github.com/icodesign/proxy-relay", rev = "5f98af75f954f22e703187008f901fce45aa0bf0", features = ["dns"] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["rt-core", "io-util", "net", "stream", "macros"] }

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
env_logger = "0.8"

[[bench]]
name = "bench"
